[package]
name = "cnpc2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
encoding_rs = "0.8.33"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.29"
directories = "5.0.1"
regex = "1.10.2"
placeholder = "1.1.4"
rust-ini = "0.20.0"
dunce = "1.0.4"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
